--- a/Agents/Agents.csproj
+++ b/Agents/Agents.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VehicleModel\RacingModel.csproj" />
+    <ProjectReference Include="..\VehicleModel\Model.csproj" />
   </ItemGroup>
 
 </Project>
