--- a/RacingSimulation/Simulation.csproj
+++ b/RacingSimulation/Simulation.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Agents\Agents.csproj" />
+  </ItemGroup>
+
 </Project>
