:see_no_evil: Make everything build

--- a/CircuitGenerator/CircuitGenerator.csproj
+++ b/CircuitGenerator/CircuitGenerator.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="ZKWeb.System.Drawing" Version="4.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Math\Mathematics.csproj" />
+  </ItemGroup>
+
 </Project>
