--- a/RacingSimulation/Racing.Simulation.csproj
+++ b/RacingSimulation/Racing.Simulation.csproj
@@ -8,11 +8,13 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="ZKWeb.System.Drawing" Version="4.0.1" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Math\Mathematics.csproj" />
+    <ProjectReference Include="..\Agents\Racing.Agents.csproj" />
+    <ProjectReference Include="..\Racing.IO\Racing.IO.csproj" />
+    <ProjectReference Include="..\VehicleModel\Racing.Model.csproj" />
   </ItemGroup>
 
 </Project>
