--- a/Agents/Racing.Agents.csproj
+++ b/Agents/Racing.Agents.csproj
@@ -5,6 +5,7 @@
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject />
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,10 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Racing.IO\Racing.IO.csproj" />
     <ProjectReference Include="..\VehicleModel\Racing.Model.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Algorithms\Planning\AStar\DataStructures\" />
   </ItemGroup>
 
 </Project>
