:construction: Update track generation

--- a/CircuitGenerator/Properties/launchSettings.json
+++ b/CircuitGenerator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Racing.CircuitGenerator": {
       "commandName": "Project",
-      "commandLineArgs": "--output tracks"
+      "commandLineArgs": "--output \"C:\\Users\\simon\\Documents\\Visual Studio 2017\\Projects\\RacingSimulation\\tracks\" -n 1"
     }
   }
 }
