--- a/RacingSimulation/Properties/launchSettings.json
+++ b/RacingSimulation/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Racing.Simulation": {
       "commandName": "Project",
-      "commandLineArgs": "--track \"../../../../tracks/simple-circuit/circuit_definition.json\" --results \"../../../../results/\" -n 1"
+      "commandLineArgs": "--track \"../../../../tracks/simple-circuit\" --results \"../../../../results/\" -n 1"
     }
   }
 }
