:construction: Fix planning

--- a/src/Racing.Planning/Racing.Planning.csproj
+++ b/src/Racing.Planning/Racing.Planning.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Racing.IO\Racing.IO.csproj" />
     <ProjectReference Include="..\Racing.Model\Racing.Model.csproj" />
+    <ProjectReference Include="..\Racing.Simulation\Racing.Simulation.csproj" />
   </ItemGroup>
 
 </Project>
